[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "multiversx-sdk-network-providers"
version = "1.0.0"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = "Deprecated. Instead, use multiversx-sdk."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests==2.31.0",
  "multiversx-sdk-core>=0.8.0,<0.9.0"
]

[project.urls]
"Homepage" = "https://github.com/multiversx/mx-sdk-py-network-providers"
